# diplomacy-llm

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
diplomacy_llm/: __init__.py  main.py
