[project]
name = "diplomacy-llm"
version = "0.1.0"
description = "Diplomacy based LLM benchmark"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "diplomacy>=1.1.2",
]

[dependency-groups]
dev = [
    "rust-just>=1.37.0",
    "pre-commit>=4.0.1",
    "bcrypt>=4.2.1",
    "coloredlogs>=15.0.1",
    "python-dateutil>=2.9.0.post0",
    "pytz>=2024.2",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "ujson>=5.10.0",
    "pylint>=3.3.2",
    "pytest>=8.3.4",
    "pytest-xdist>=3.6.1",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "__pycache__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 88

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["E501", "D203", "RET503", "D205"]

select = ["E", "W", "F", "I", "UP", "D", "B", "SIM", "ASYNC", "A", "PIE", "T20", "Q", "RSE", "RET", "SLF001", "PTH", "N", "ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pyright]
venvPath = "."
venv = ".venv"
